<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Profile"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:orientation="vertical">
    <TextView
        android:text="@string/profile_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/styleTitle" />

    <TextView android:text="@string/name"
        android:theme="@style/ProfileSettigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/nameText"
        android:textStyle="bold"
        android:theme="@style/ProfileSettigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/email"
        android:theme="@style/ProfileSettigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/emailText"
        android:textStyle="bold"
        android:theme="@style/ProfileSettigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/emailVerifiedText"
        android:textStyle="bold"
        android:theme="@style/ProfileSettigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12sp"
        android:background="@android:color/darker_gray"/>

    <Button android:id="@+id/btnChangeName"
        android:text="@string/update_name"
        style="@style/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btnChangePassword"
        android:text="@string/update_password"
        style="@style/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btnDeleteAccount"
        android:text="@string/delete_profile"
        style="@style/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  />
</LinearLayout>